--- a/sass/_layouts.sass
+++ b/sass/_layouts.sass
@@ -1,7 +1,10 @@
 // default layout
+=wrapp
+	width: 960px
+	margin: 0 auto
+	
 .l
-	width: 100%
-	display: inline-block
+	+wrapp
 	.l-col1
 		float: left
 		width: 20%
