--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -2,9 +2,8 @@
 /* Header 
  * =======================================================================================*/
 .header
-	margin-top: 20px
 	margin-bottom: 15px
-	width: 300px
+	+wrapp
 
 /* Navigation 
  * =======================================================================================*/
