--- a/sass/lib/_mixins.sass
+++ b/sass/lib/_mixins.sass
@@ -48,6 +48,7 @@ $breaklarge: 1180px
 	-moz-box-shadow: $val
 	-ms-box-shadow: $val
 	-o-box-shadow: $val
+	box-shadow: $val
 
 //simple gradient
 =g($color1, $color2)
