--- a/sass/lib/_mixins.sass
+++ b/sass/lib/_mixins.sass
@@ -89,6 +89,13 @@ $breaklarge: 1180px
 =tr($what)
 	+transition($what)
 
+// TRANSFORM
+=transform($what)
+	-webkit-transform: $what
+	-moz-transform: $what
+	-o-transform: $what
+	transform: $what
+
 =hide-text
 	font: 0/0 a
 	text-shadow: none
